--- a/calculator-app-main/index.html
+++ b/calculator-app-main/index.html
@@ -25,7 +25,7 @@
         <label for="theme3">3</label>
       </div>
     </div>
-    <div class="screen">897</div>
+    <div class="screen">WELCOME</div>
     <div class="keypad">
           <button onclick="display(7)">
             7
