--- a/calculator-app-main/index.html
+++ b/calculator-app-main/index.html
@@ -16,6 +16,7 @@
     <div class="topbar">
       <p>calc</p>
       <div class="themebox">
+        <span>THEME</span>
         <div class="theme-switch"></div>
         <input type="radio" name="theme" id="theme1" value="0" checked>
         <label for="theme1">1</label>
